# get-roles-reminder

./: README.md  requirements.txt  setup.cfg
src/reminder/: __main__.py  remind.py
