[metadata]
name = get_roles_reminder
description = A simple discord bot that reminds members to get reaction roles in a designated channel.
author = shenafield
platforms = unix, linux, osx, sygwin, win32
classifiers = 
    Programming Language :: Python :: 3.10

[options]
packages =
    reminder
install_requires =
    py-cord>=2.0.0b4
    python-dotenv>=0.20
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    reaction_roles_reminder = reminder.__main__:main
